--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "normalize.css": "~3.0.3",
     "core-js": "^2.0.0",
+    "history": "^4.3.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
