--- a/package.json
+++ b/package.json
@@ -66,11 +66,14 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
-    "normalize.css": "~3.0.3",
     "core-js": "^2.0.0",
     "history": "^4.3.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-bootstrap": "^0.30.5",
+    "react-dom": "^15.0.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0"
   }
 }
